# curveplate

./: .gitignore  README.md  pyproject.toml  specification.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  publish.yml  sync-mirror.yml
docs/: CHANGELOG.md  TASKS.md
src/curveplate/: __init__.py  dxf_export.py  geometry.py  pdf_export.py  stp_export.py
tests/: __init__.py
